--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.png" alt="" /></span>
-							<h1>Amrisha R R</h1>
+							<h1>Amrisha R R 19BEC096</h1>
 							<p>Design Sprint - Rapid Prototyping</p>
 						</header>
 						<!--
